--- a/index.html
+++ b/index.html
@@ -5,9 +5,314 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>arjun-assignment2</title>
+     <!---------------------- 
+        Main CSS
+      ------------------------>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    This text for test.
+    <!---------------------- 
+        header
+      ------------------------>
+    <header>
+        <nav>
+            <div class="navbar">
+                <span class="menu-icon"><i class="fas fa-bars"></i></span>
+                <div class="menu-items">
+                    <a href="" style="padding-left: 0;">Home</a>
+                    <a href="">Clubs</a>
+                    <a href="">World Cup 2023</a>
+                    <a href="">Upcoming Matches</a>
+                    <a href="">Contact</a>
+                </div>
+                <div class="login-button">
+                    <a href=""><i class="fas fa-sign-in-alt"></i> Login</a>
+                </div>
+            </div>
+            <div class="banner">
+                <div class="banner-text">
+                    <h1>All Highlights Copa America 2021</h1>
+                    <div class="link-button">
+                        <a href="">Watch Live<i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="banner-img">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </nav>
+    </header>
+
+      <main>
+            <!---------------------- 
+                 players section
+            ------------------------>
+          <section>
+                <div id="players">
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Ashraful_Islam_Rana.png.jpg" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Ashraful Islam Rana</h3>
+                                <p>Ashraful Islam Rana is a Bangladeshi footballer who plays as a goalkeeper for the 
+                                    Bangladesh national team in Bangladesh Premier League.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/rJamal Bhuyan.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Jamal Harris Bhuyan</h3>
+                                <p>Jamal Harris Bhuyan is a Danish-born Bangladeshi professional footballer who plays as a midfielder for 
+                                captains the Bangladesh national team. Wikipedia</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Bipul Ahamed1.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Biplu Ahmed</h3>
+                                <p>Biplu Ahmed, also spelled as Biplo Ahmed, is a Bangladeshi footballer Bashundhara Kings in Bangladesh Premier League 
+                                    and Bangladesh national football team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Mamunul Islam.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Mamunul Islam</h3>
+                                <p>Mamunul Islam Mamun is a Bangladeshi professional footballer who currently plays as a 
+                                    midfielder for Dhaka Abahani Limited and Bangladesh national football team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/topu.jpg" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Topu Barman</h3>
+                                <p>Topu Barman is a Bangladeshi footballer who plays as a defender.
+                                He currently plays for Bashundhara Kings and Bangladesh national football team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Tarik Kazi.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Tariq Kazi</h3>
+                                <p>Tariq Kazi born 6 October 2000 is a footballer who plays as a defender for 
+                                    Bangladesh Football Premier League side Bashundhara Kings and the Bangladesh national team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Saad Uddin.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Md Saad Uddin</h3>
+                                <p>Md Saad Uddin is a Bangladeshi footballer who plays as a Right Winger and 
+                                    sometimes Right Wing-back for Dhaka Abahani and Bangladesh national team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Rahmat_Mia_in_2021.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Mohamed Rahmat Mia</h3>
+                                <p>Mohamed Rahmat Mia is a Bangladeshi footballer who currently plays as a defender for Saif SC and Bangladesh national football team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Md Rahman sufilC.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Md. Rahman Sufil</h3>
+                                <p>Mahbubur Rahman Sufil is a Bangladeshi footballer who plays as a Forward. He played for Arambagh KS in the Bangladesh Football Premier League.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Masuk_Mia_Jony.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Masuk Mia Jony</h3>
+                                <p>Masuk Mia Jony is a Bangladeshi footballer who plays as a midfielder. 
+                                    He currently plays for Dhaka Mohammedan... Some text added for fill gap.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/Rimon_Hossain.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Md. Rimon Hossian</h3>
+                                <p>Mohammad Rimon Hossian, known as Rimon, is a Bangladeshi professional 
+                                    footballer who plays for Bashundhara Kings and the Bangladesh
+                                    national team.</p>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="player">
+                        <div class="player-container">
+                            <div class="player-img">
+                                <img src="images/BD/motin.png" alt="">
+                            </div>
+                            <article class="payer-text">
+                                <h3>Md. Motin Mia</h3>
+                                <p>Mohammed Motin Mia is a Bangladeshi footballer who plays as a winger or center 
+                                    forward. He currently plays Bashundhara Kings in Bang...</p>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+          </section>
+          <!---------------------- 
+                Result section
+            ------------------------>
+          <section id="winner-list">
+              <h1>Bangladesh national cricket team records</h1>
+              <div id="container-center coustom">
+                    <div class="win-list">
+                        <img src="images//t/t1.png" alt="">
+                        <img src="images//t/t2.png" alt="">
+                        <img src="images//t/t3.png" alt="">
+                        <img src="images//t/t4.png" alt="">
+                    </div>
+              </div>
+          </section>
+          <!---------------------- 
+                 women-article section
+            ------------------------>
+          <section>
+              <div id="container-center">
+                    <article class="women-article">
+                        <h2>What the future holds for the Bangladesh girls</h2>
+                        <p>What the future holds for the Bangladesh girls
+                        Let it be the national side or different age level teams, the Bangladesh women have brought laurels for the country in the last couple of years with their latest title winning success coming in the recently concluded Saff U-15 Championship.
+                        Dhaka Tribune has tried to explore the probable ways through which the success of the Bangladesh girls can be replicated in the senior level. Below is the second and final part of the two-segment story on women’s football in Bangladesh.</p>
+                    </article>
+                    <div class="women-img">
+                        <img src="images/BD/girls.jpg" alt="">
+                    </div>
+              </div>
+          </section>
+
+    <!---------------------- 
+        Latest News
+    ------------------------>
+        <div class="latest-news">
+            <div class="contents">
+                <h2>Latest News</h2>
+                <div class="all-news">
+                    <div class="news mr40">
+                        <div class="news-img"><img src="images/News/news6.jpg" alt=""></div>
+                        <article class="news-info">
+                            <h6>Bashundhara Kings defeated Mohammedan SC Ltd. by 1-0 goal in the match</h6>
+                            <p>Today's match of TVS Bangladesh Premier League 2021 (2nd phase) has been played at 
+                                Bangabandhu National Stadium between Bashundhara Kings and Mohammedan SC Ltd. at 4:30 pm today...</p>
+                            <div class="date-share"><span>12/05/2021. </span><i class="fas fa-share-alt"></i></div>
+                        </article>
+                    </div>
+                    <div class="news">
+                        <div class="news-img"><img src="images/News/news5.jpg" alt=""></div>
+                        <article class="news-info">
+                            <h6>Agrani Bank Ltd. Sports Club defeated Farashganj Sporting Club by 2-1 goals</h6>
+                            <p>Today's match of Bangladesh Championship League 2020-21 (2nd phase) has been played at Bir Sherestha Shaheed Shipahi Mostafa Kamal 
+                                between Agrani Bank Ltd. Sports Club and Farashganj Sporting Club at 3:00 pm....</p>
+                            <div class="date-share"><span>12/05/2021. </span><i class="fas fa-share-alt"></i></div>
+                        </article>
+                    </div>
+                    <div class="news mr40">
+                        <div class="news-img"><img src="images/News/news4.jpg" alt=""></div>
+                        <article class="news-info">
+                            <h6>Bashundhara Kings dominated FC Brahmanbaria by 6 goals!</h6>
+                            <p>Today's match of "Women's Football League 2020-21" has been played at Bir Sherestha Shaheed Shipahi Mostafa Kamal Stadium 
+                                between FC Brahmanbaria and Bashundhara Kings at 11.00 am today. ...</p>
+                            <div class="date-share"><span>12/05/2021. </span><i class="fas fa-share-alt"></i></div>
+                        </article>
+                    </div>
+                    <div class="news">
+                        <div class="news-img"><img src="images/News/news3.jpg" alt=""></div>
+                        <article class="news-info">
+                            <h6>Bashundhara Kings defeated Rahmatganj MFS by 2-1 goals</h6>
+                            <p>Today's match of TVS Bangladesh Premier League 2021 (2nd phase) has been played at Bangabandhu National Stadium between 
+                                Bashundhara Kings and Rahmatganj MFS at 5:00 pm today. Bashundhara Kings defeated Rahmatganj MFS by 2-1 goals in the match....</p>
+                            <div class="date-share"><span>12/05/2021. </span><i class="fas fa-share-alt"></i></div>
+                        </article>
+                    </div>
+                    <div class="news mr40">
+                        <div class="news-img"><img src="images/News/news2.jpg" alt=""></div>
+                        <article class="news-info">
+                            <h6>BFF arranges virtual meeting regarding Academy Accreditation</h6>
+                            <p>The Bangladesh Football Federation (BFF) are acknowledging a number of Academies across the country
+                                as part of the Academy Accreditation Scheme.ederation has forged...</p>
+                            <div class="date-share"><span>12/05/2021. </span><i class="fas fa-share-alt"></i></div>
+                        </article>
+                    </div>
+                    <div class="news">
+                        <div class="news-img"><img src="images/News/news1.jpg" alt=""></div>
+                        <article class="news-info">
+                            <h6>Referees Department of Bangladesh Football Federation arranged</h6>
+                            <p>Referees Department of Bangladesh Football Federation arranged a virtual meeting through online platform Zoom from 11.00 
+                                am to 1.00 pm today 07 July 2021 with Referees conducting matches...</p>
+                            <div class="date-share"><span>12/05/2021. </span><i class="fas fa-share-alt"></i></div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+      </main>
+      <!---------------------- 
+                 women-article section
+            ------------------------>
+      <footer>
+          <div class="footer-container">
+              <div class="footer-logo">
+                  <img src="images/Logo.png" alt="">
+              </div>
+              <div class="footer-link">
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-google-plus-square"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-youtube-square"></i>
+              </div>
+              <span>Copyright BFF © 2012 to 2022.</span>
+          </div>
+      </footer>
+
+    <!---------------------- 
+        Fontawesome
+     ------------------------>
+     <script src="https://kit.fontawesome.com/768b2cc49f.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
